--- a/index.html
+++ b/index.html
@@ -1,12 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div id="wrap">
+        <header class="header">
+            <div class="header-bar">
+                <div class="container">
+                    <a href="#">
+                        <h1 class="logo"><img src="./img/logo.png" alt="logo"></h1>
+                    </a>
+                </div>
+            </div>
+            <div class="header-txt">
+                <h2>GRADIENT.</h2>
+                <p>Dance of Color and Light.</p>
+            </div>
+        </header>
+
+        <section class="section">
+
+            <article class="show">
+                <div class="container">
+                    <div class="article-title">
+                        <h3>
+                            Color Show.
+                        </h3>
+                    </div>
+
+                    <div class="cs-box">
+                        <div class="img-box">
+                            <p>
+                                Mac OS<br />
+                                Big Sur
+                            </p>
+                            <img src="./img/Cs img 1.png" alt="">
+                        </div>
+
+                        <div class="img-box">
+                            <p>
+                                Teahub.io
+                            </p>
+                            <img src="./img/Cs img 2.png" alt="">
+                        </div>
+
+                        <div class="img-box">
+                            <p>
+                                Wallpaper Safari<br/>
+                                Honor Play
+                            </p>
+                            <img src="./img/Cs img 3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </article>
+
+            <article class="triangle">
+
+            </article>
+
+            <article class="world">
+                <div class="container">
+                    <div class="article-title">
+                        <h3>Look at the World.</h3>
+                    </div>
+
+
+                    <img src="./img/World img.png" alt="world">
+
+                    <div class="desc">
+                        <h4 class="desc-title">Look at the Light.</h4>
+                        <div class="desc-txt">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur<br/>
+                                adipiscing elit. Fusce ac viverra nunc.<br/>
+                                Nulla facilisi. Ut quam leo, aliquet condimentum<br/>
+                                pretium eu,convallis quis magna.<br/>
+                            </p>
+
+                            <button class="more">
+                                <a href="#">
+                                    View more
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </article>
+
+            <article class="finale">
+                <div class="container">
+
+                    <div class="article-type">
+                        <h3>
+                            COLOR.
+                        </h3>
+                    </div>
+                </div>
+
+            </article>
+
+
+
+        </section>
+    </div>
 </body>
+
 </html>
